Revision history for {{$dist->name}}

{{$NEXT}}

2.33      2022-08-28 12:39:37 -0600
  - Added Alien::Build::Plugin::Fetch::HostAllowList
  - Added Alien::Build::Plugin::Fetch::HostBlockList

2.32      2022-08-26 20:30:32 -0600
  - Enable Wasm on Linux Arm64
  - Updated my dists to latest

2.31      2022-02-18 19:07:58 -0700
  - Remove some skips on macOS that appear to be working
  - Updated my dists to latest

2.30      2022-01-22 03:44:41 -0700
  - Added Dist::Zilla::Plugin::Meta::Dynamic::Config
  - Added Dist::Zilla::Plugin::PPPort
  - Added MooseX::Types::JSON
  - Updated my dists to latest

2.29      2021-11-15 07:56:13 -0700
  - Updated my dists to latest
  - Remove deprecated Test::CChecker

2.28      2021-11-14 08:47:58 -0700
  - Updated my dists to latest
  - Do not try to install Win32::Vcpkg on anything but 64 bit intel Linux
  - Added Return::MultiLevel
  - Added Dist::Zilla::MintingProfile::FFI
  - Added Task::FFIDev
  - Added Dist::Zilla::MintingProfile::AlienBuild
  - Added Task::ALienDev

2.27      2021-08-30 16:45:03 -0600
  - Updated my dists to latest

2.26      2021-08-05 06:10:59 -0600
  - Added Dist::Zilla::Plugin::ArchiveTar
  - Added Dist::Zilla::Plugin::Libarchive
  - Added Eval::LineNumbers
  - Added File::BaseDir
  - Added File::XDG
  - Remove App::Ack
  - Remove Archive::Tar::Wrapper
  - Remove autodie
  - Remove DBD::mysqlPP
  - Remove DBD::PgPP
  - Remove Devel::StackTrace
  - Remove Digest::MD5
  - Remove Dist::Zilla::Plugin::Bootstrap::lib
  - Remove Dist::Zilla::Plugin::DynamicPrereqs
  - Remove Dist::Zilla::Plugin::Meta::Dynamic::Config
  - Remove Dist::Zilla::Plugin::PPPort
  - Remove JSON
  - Remove Moose
  - Remove YAML::XS
  - Remove Text::Hunspell

2.25      2021-06-30 10:31:18 -0600
  - Updated my dists to latest
  - Added Devel::ebug::HTTP

2.24      2021-06-24 01:55:00 -0600
  - Updated my dists to latest
  - Added Pod::Simple::Words
  - Added Text::HumanComputerWords
  - Added Alien::Build::Plugin::Extract::Libarchive
