@@ -15,12 +15,12 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 2.5900
-Acme::Alien::DontPanic2                        = 2.5900
-Acme::Ford::Prefect                            = 2.5900
-Acme::Ford::Prefect2                           = 2.5900
-Acme::Ford::Prefect::FFI                       = 2.5900
-Acme::Ford::Prefect2::FFI                      = 2.5900
+Acme::Alien::DontPanic                         = 2.6500
+Acme::Alien::DontPanic2                        = 2.6500
+Acme::Ford::Prefect                            = 2.6500
+Acme::Ford::Prefect2                           = 2.6500
+Acme::Ford::Prefect::FFI                       = 2.6500
+Acme::Ford::Prefect2::FFI                      = 2.6500
 Alien                                          = 0.96
 Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.18
@@ -28,19 +28,19 @@ Alien::automake                                = 0.18
 Alien::Autotools                               = 1.07
 Alien::Base::ModuleBuild                       = 1.15
 Alien::bison                                   = 0.22
-Alien::Build                                   = 2.59
-Alien::Build::Git                              = 0.09
-Alien::Build::MB                               = 0.08
+Alien::Build                                   = 2.68
+Alien::Build::Git                              = 0.10
+Alien::Build::MB                               = 0.09
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
 Alien::Build::Plugin::Download::GitHub         = 0.07
-Alien::Build::Plugin::Extract::Libarchive      = 0.01
-Alien::Build::Plugin::Fetch::Cache             = 0.04
+Alien::Build::Plugin::Extract::Libarchive      = 0.02
+Alien::Build::Plugin::Fetch::Cache             = 0.05
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Probe::Override          = 0.03
 Alien::Build::Plugin::Fetch::HostAllowList     = 0.01
 Alien::Build::Plugin::Fetch::HostBlockList     = 0.01
-Alien::Build::Plugin::Fetch::Prompt            = 0.60
-Alien::Build::Plugin::Fetch::Rewrite           = 0.02
+Alien::Build::Plugin::Fetch::Prompt            = 0.61
+Alien::Build::Plugin::Fetch::Rewrite           = 0.03
 Alien::castxml                                 = 0.01
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.12
@@ -75,7 +75,7 @@ Alien::OpenSSL                                 = 0.14
 Alien::patch                                   = 0.15
 Alien::pkgconf                                 = 0.18
 Alien::Role::Alt                               = 0.05
-Alien::Role::Dino                              = 0.07
+Alien::Role::Dino                              = 0.08
 Alien::unzip                                   = 0.03
 Alien::wasmtime                                = 0.16
 Alien::xz                                      = 0.08
@@ -89,7 +89,7 @@ AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.54
 App::af                                        = 0.17
-App::cpangitify                                = 0.19
+App::cpangitify                                = 0.20
 App::plasm                                     = 0.03
 App::Prove::Plugin::TermTable                  = 0.03
 App::Prove::Plugin::TermTableStty              = 0.03
@@ -97,6 +97,7 @@ App::pwhich                                    = 1.17
 App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.08
 App::supertouch                                = 0.02
+App::tarweb                                    = 0.01
 App::whichdll                                  = 0.03
 Archive::Ar::Libarchive                        = 2.09
 Archive::Libarchive                            = 0.05
@@ -125,7 +126,7 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.71
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.72
 Env::ShellWords                                = 0.02
 Eval::LineNumbers                              = 0.35
 Exception::Class::DBI                          = 1.04
@@ -134,7 +135,7 @@ FFI::C                                         = 0.12
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.28
 FFI::ExtractSymbols                            = 0.07
-FFI::Platypus                                  = 2.00
+FFI::Platypus                                  = 2.01
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.06
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
@@ -171,6 +172,8 @@ Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.25026
 PkgConfig::LibPkgConf                          = 0.11
+Plack::App::GitHubPages::Faux                  = 0.02
+Plack::App::Libarchive                         = 0.02
 Pod::Simple::Words                             = 0.07
 PPIx::DocumentName                             = 1.01
 Shell::Config::Generate                        = 0.34
@@ -187,7 +190,7 @@ Test::Script                                   = 1.29
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.06
 Test2::Tools::FFI                              = 0.06
-Test2::Tools::HTTP                             = 0.10
+Test2::Tools::HTTP                             = 0.11
 Test2::Tools::HTTP::UA::Mojo                   = 0.05
 Test2::Tools::JSON::Pointer                    = 0.02
 Test2::Tools::PerlCritic                       = 0.04
